Fixed z-index issue with isc equalize risk tooltip

--- a/src/assets/css/calculator.css
+++ b/src/assets/css/calculator.css
@@ -934,6 +934,7 @@ table.index-strategy-table tr th {
     font-weight: 700;
     text-align: center;
     border-radius: 30px 30px 0 0;
+    z-index: 1000;
 }
 .table-graph-bottom-each-main-div .table-graph-bottom-head.greenClr {
     background: #147d64;
